--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
