--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "formidable": "^3.5.1",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
