--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb-base",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "env": {
     "node": true,
     "es6": true,
